--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Express Server Docker</title>
+    <title>Express Server</title>
 </head>
 <body>
     <h1>
-        Esta es la aplicación 2
+        Esta es el backend del examen
     </h1>
 </body>
 </html>
